<resources>
    <string name="app_name">七牛短视频</string>
    <string name="upload">上传</string>
    <string name="cancel_upload">取消上传</string>
    <string name="if_edit_video">是否编辑视频</string>
    <string name="dlg_yes">是</string>
    <string name="dlg_no">否</string>
    <string name="title_record">视频拍摄</string>
    <string name="title_audio_record">音频录制</string>
    <string name="title_compose">视频拼接</string>
    <string name="title_image_compose">图片合成</string>
    <string name="title_multiple_compose">图片视频混排</string>
    <string name="title_player">视频播放</string>
    <string name="title_screen_record">屏幕录制</string>
    <string name="title_transcode">视频转码</string>
    <string name="title_trim">视频剪辑</string>
    <string name="title_gif">制作GIF动画</string>
    <string name="title_show_gif">显示GIF动画</string>
    <string name="title_start_compose">启动合成</string>
    <string name="title_video_size">视频尺寸</string>
    <string name="title_video_bitrate">视频码率</string>
    <string name="title_audio_file_name">音频文件：</string>
    <string name="title_add_image">添加图片</string>
    <string name="title_add_music">添加音乐</string>
    <string name="title_ar_effect">AR 特效</string>
    <string name="title_from_draft_box">草稿箱</string>
    <string name="title_all_drafts">草稿列表</string>
    <string name="title_video_divide">视频分割</string>
    <string name="title_transition_make">过场字幕</string>
    <string name="title_mix_record">合拍</string>
    <string name="dlg_save_draft_title">输入草稿标题</string>
    <string name="dlg_save_draft_yes">保存</string>
    <string name="toast_draft_title_exist">已存在相同标题的草稿</string>
    <string name="toast_draft_save_success">草稿保存成功</string>
    <string name="toast_draft_save_fail">草稿保存失败</string>
    <string name="toast_draft_recover_success">草稿恢复成功</string>
    <string name="toast_draft_recover_fail">草稿恢复失败</string>
    <string name="dlg_delete_draft">确认删除草稿</string>
    <string name="desc_duration">持续时间</string>
    <string name="desc_transition_time">转场时间</string>
    <string name="desc_second">秒</string>
    <string name="desc_ms">ms</string>
    <string name="desc_paint_color">画笔颜色</string>
    <string name="desc_paint_size">画笔大小</string>
    <string name="desc_paint_undo">撤销</string>
    <string name="desc_paint_clear">清除</string>
    <string name="desc_image_tip">请选择所需的贴图！</string>
    <string name="desc_compose_display_tip">展现方式：</string>
    <string name="desc_compose_display_full">全屏</string>
    <string name="desc_compose_display_fit">自适应</string>
    <string name="ar_record">开始录制</string>
    <string name="ar_stop">停止录制</string>
    <string name="speed_super_slow">极慢"</string>
    <string name="speed_slow">慢"</string>
    <string name="speed_normal">正常"</string>
    <string name="speed_fast">快"</string>
    <string name="speed_super_fast">极快"</string>
    <string name="speed_range">分段变速</string>
    <string name="transition_maker_edit">编辑"</string>
    <string name="transition_maker_confirm">确定"</string>
    <string name="divide_delete_tip">双击片段可以删除"</string>
    <string name="divide_add_tip">剪一段"</string>
    <string name="divide_add_video">添加视频"</string>
    <string name="divide_long_press_tip">长按缩略图排序"</string>
    <string name="divide_compose">视频合成"</string>
    <string name="divide_add_transition">添加过场字幕"</string>
    <string name="lsq_filter_group_zhuanye">直播厂商合作</string>
    <string name="lsq_filter_nature">自然</string>
    <string name="lsq_filter_pink">粉嫩</string>
    <string name="lsq_filter_jelly">果冻</string>
    <string name="lsq_filter_ruddy">红润</string>
    <string name="lsq_filter_sugar">糖水色</string>
    <string name="lsq_filter_honey">蜜粉</string>
    <string name="lsq_filter_clear">白皙</string>
    <string name="lsq_filter_timber">小森林</string>
    <string name="lsq_filter_whitening">美白</string>
    <string name="lsq_filter_porcelain">青花瓷</string>
    <string name="lsq_filter_Skinwhitening_1">美白</string>
    <string name="lsq_filter_group_ZhiBo0">直播公用</string>
    <string name="lsq_filter_VideoFair07">自然</string>
    <string name="lsq_filter_VideoWhiteSkin07">美白</string>
    <string name="lsq_filter_Brilliantly07">明亮</string>
    <string name="lsq_filter_Forest09">小森林</string>
    <string name="lsq_filter_SkinPink07">粉嫩</string>
    <string name="lsq_filter_set_smoothing">润滑</string>
    <string name="lsq_filter_set_whitening">白皙</string>
    <string name="lsq_filter_set_mixied">效果</string>
    <string name="lsq_filter_set_eyeSize">大眼</string>
    <string name="lsq_filter_set_chinSize">瘦脸</string>
    <string name="lsq_filter_set_vignette">暗角</string>
    <string name="lsq_dermabrasion">磨皮</string>
    <string name="lsq_big_eyes">大眼</string>
    <string name="lsq_thin_face">瘦脸</string>
    <string name="setting_hand">人手关键点跟踪及手势检测</string>
    <string name="setting_hand_desc">43种静态手势+2种动态手势识别</string>
    <string name="setting_beauty">美颜</string>
    <string name="setting_face_lift">瘦脸</string>
    <string name="setting_big_eye">大眼</string>
    <string name="setting_skin_grinding">磨皮</string>
    <string name="setting_skin_whitening">美白</string>
    <string name="setting_skin_sharpen">锐化</string>
    <string name="setting_filter_intensity">滤镜强度</string>
    <string name="setting_makeup">美妆</string>
    <string name="setting_red_lip">唇色</string>
    <string name="setting_blush">腮红</string>
    <string name="setting_skeleton">骨骼检测</string>
    <string name="setting_skeleton_desc">实时检测人体17关键点</string>
    <string name="setting_face">人脸106点</string>
    <string name="setting_face_desc">人脸106关键点跟踪及人脸动作识别</string>
    <string name="setting_face_extra">人脸280点</string>
    <string name="setting_face_extra_desc">人脸280关键点：在106点基础上增加眼球、嘴唇关键点</string>
    <string name="seeting_face_attribute">人脸属性</string>
    <string name="seeting_face_attribute_desc">人脸属性及表情</string>
    <string name="setting_face_verify">人脸比对</string>
    <string name="setting_human_dist">距离估计</string>
    <string name="setting_human_dist_desc">人脸到摄像头的距离估计</string>
    <string name="invalid_license">无效的授权文件</string>
    <string name="init_face_failed">Face初始化失败</string>
    <string name="init_hand_failed">手势初始化失败</string>
    <string name="init_effect_failed">Effect初始化失败</string>
    <string name="portaitmatting">人体分割</string>
    <string name="portaitmattingdesc">人体分割算法</string>
    <string name="setting_hair">染发</string>
    <string name="setting_hair_desc">染发算法</string>
    <string name="sticker_qrcode">扫码体验Creator</string>
    <string name="download_fail">下载失败</string>
    <string name="download_success">下载成功</string>
    <string name="unip_fail">解压失败</string>
    <string name="file_check_fail">文件检查失败</string>
    <string name="license_check_fail">授权失败</string>
    <string name="sticker_load_fail">贴纸加载失败</string>
    <string name="sticker_load_success">贴纸加载成功</string>
    <string name="invalid_license_file">无效的授权文件</string>
    <string name="download_sticker">下载贴纸</string>
    <string name="sticker_parse_fail">贴纸ID解析失败</string>
    <string name="network_error">网络连接失败，请检查网络设置</string>
    <string name="tab_face">人脸</string>
    <string name="tab_face_attr">人脸属性</string>
    <string name="tab_hand">手势</string>
    <string name="tab_body">人体</string>
    <string name="tab_face_beautification">美颜</string>
    <string name="tab_filter">滤镜</string>
    <string name="tab_face_makeup">美妆</string>
    <string name="tab_face_beauty_reshape">美形</string>
    <string name="tab_face_beauty_body">美体</string>
    <string name="tab_sticker">贴纸</string>
    <string name="tab_segmentation">分割</string>
    <string name="tab_face_verify">人脸比对</string>
    <string name="tab_human_dist">距离估计</string>
    <string name="tab_body_cutout">人体分割</string>
    <string name="tab_hair_cutout">头发分割</string>
    <string name="filter_normal">正常</string>
    <string name="filter_chalk">柔白</string>
    <string name="filter_cream">奶油</string>
    <string name="filter_oxgen">氧气</string>
    <string name="filter_campan">桔梗</string>
    <string name="filter_lolita">洛丽塔</string>
    <string name="filter_mitao"> 蜜桃</string>
    <string name="filter_makalong">马卡龙</string>
    <string name="filter_paomo">泡沫</string>
    <string name="filter_yinhua">樱花</string>
    <string name="filter_musi">浅暖</string>
    <string name="filter_wuyu">物语</string>
    <string name="filter_beihaidao">北海道</string>
    <string name="filter_riza">日杂</string>
    <string name="filter_xiyatu">西雅图</string>
    <string name="filter_jingmi">静谧</string>
    <string name="filter_jiaopian">胶片</string>
    <string name="filter_nuanyang">暖阳</string>
    <string name="filter_jiuri">旧日</string>
    <string name="filter_hongchun">红唇</string>
    <string name="filter_julandiao">橘蓝调</string>
    <string name="filter_tuise">褪色</string>
    <string name="filter_heibai">黑白</string>
    <string name="sticker_yumao">羽毛</string>
    <string name="sticker_xiyue">洗月</string>
    <string name="sticker_xiyue_tip">眨眼触发魔法阵</string>
    <string name="sticker_mojie">魔界妆</string>
    <string name="sticker_shenlong">神龙</string>
    <string name="sticker_huaxianzi">花仙子</string>
    <string name="sticker_huaxianzi_tip">眨眼试试</string>
    <string name="sticker_caixiaomao">彩小猫</string>
    <string name="sticker_caixiaomao_tip">眨眼试试</string>
    <string name="sticker_xiaoemo">小恶魔</string>
    <string name="sticker_shengrikuaile">生日快乐</string>
    <string name="sticker_shengrikuaile_tip">张嘴试试</string>
    <string name="sticker_maomao">毛毛</string>
    <string name="sticker_wumeiniang">武媚娘</string>
    <string name="sticker_wumeiniang_tip">邀请小伙伴一起玩</string>
    <string name="sticker_liuxing">流星</string>
    <string name="sticker_liuxing_tip">点头试试</string>
    <string name="sticker_yinghua">樱花妆</string>
    <string name="sticker_tujie">兔姐</string>
    <string name="sticker_dielianjin">蝶恋金</string>
    <string name="sticker_dielianjin_tip">比心加眨眼试试吧~</string>
    <string name="sticker_dielianfen">蝶恋粉</string>
    <string name="sticker_dielianfen_tip">比心加眨眼试试吧~</string>
    <string name="sticker_huahai">花海</string>
    <string name="sticker_huahai_tip">眨眼试试</string>
    <string name="sticker_miluzhuang">麋鹿妆</string>
    <string name="sticker_nyekong">夜空烟火</string>
    <string name="sticker_yekong_tip">点头试试</string>
    <string name="sticker_haiwang">海王</string>
    <string name="sticker_haiwang_tip">点头试试</string>
    <string name="sticker_tanchizhu">贪吃猪</string>
    <string name="sticker_tanchizhu_tip">张嘴试试~</string>
    <string name="sticker_xinxing">发射心星</string>
    <string name="sticker_xinxing_tip">眨眼试试~</string>
    <string name="sticker_milutoushi">麋鹿头饰</string>
    <string name="sticker_nvshen">逆神面具</string>
    <string name="sticker_chelianmao">扯脸猫</string>
    <string name="sticker_chuipaopao">吹泡泡</string>
    <string name="sticker_mengmengxiaolu">萌萌小鹿</string>
    <string name="sticker_mengmengxiaolu_tip">眨眼试试</string>
    <string name="sticker_duiwohaqi">对我哈气</string>
    <string name="sticker_duiwohaqi_tip">对手机哈气</string>
    <string name="sticker_tuaixin">吐爱心</string>
    <string name="sticker_tuaixin_tip">张嘴试试</string>
    <string name="sticker_xiaohuanggou">小黄狗</string>
    <string name="sticker_woshishui">我是谁</string>
    <string name="sticker_woshishui_tip">邀请其他小伙伴一起试试</string>
    <string name="sticker_nvjingling">女精灵</string>
    <string name="sticker_nvjingling_tip">眨眼试试</string>
    <string name="sticker_sanzhilanmao">三只懒猫</string>
    <string name="sticker_huaxin">画心</string>
    <string name="sticker_yanzhisaomiao">颜值扫描</string>
    <string name="sticker_yanzhisaomiao_tip">邀请小伙伴一起比颜值</string>
    <string name="sticker_tiezhi">贴纸妆</string>
    <string name="sticker_caomei">草莓妆</string>
    <string name="sticker_xinhua">心花怒放</string>
    <string name="sticker_xinhua_tip">挑眉试试</string>
    <string name="sticker_wodeshenghao">我的身高</string>
    <string name="similarity">相似度</string>
    <string name="cost">耗时</string>
    <string name="detect">检测</string>
    <string name="effect">特效</string>
    <string name="sticker">贴纸</string>
</resources>