<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false">

    <com.qiniu.shortvideo.bytedance.view.SquareGLSurfaceView
            android:id="@+id/preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <com.qiniu.shortvideo.bytedance.bytedance.view.ViewfinderView
            android:id="@+id/qrcode_finder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    <FrameLayout
            android:id="@+id/faceinfotrans"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"/>

    <FrameLayout
            android:id="@+id/tip_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <LinearLayout
            android:id="@+id/brightness_panel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignRight="@+id/preview"
            android:layout_alignBottom="@+id/preview"
            android:orientation="vertical"
            android:padding="15dp">

        <ImageView
                android:id="@+id/adjust_brightness_button"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:onClick="onClickBrightness"
                android:src="@mipmap/btn_brightness"/>

        <com.qiniu.shortvideo.bytedance.view.VerticalSeekBar
                android:id="@+id/adjust_brightness"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/preview"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/speed_panel"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/super_slow_speed_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onSpeedClicked"
                android:padding="7dp"
                android:text="@string/speed_super_slow"
                android:textColor="@color/speedTextNormal"
                android:textSize="15sp"/>

        <TextView
                android:id="@+id/slow_speed_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onSpeedClicked"
                android:padding="7dp"
                android:text="@string/speed_slow"
                android:textColor="@color/speedTextNormal"
                android:textSize="15sp"/>

        <TextView
                android:id="@+id/normal_speed_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onSpeedClicked"
                android:padding="7dp"
                android:text="@string/speed_normal"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"/>

        <TextView
                android:id="@+id/fast_speed_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onSpeedClicked"
                android:padding="7dp"
                android:text="@string/speed_fast"
                android:textColor="@color/speedTextNormal"
                android:textSize="15sp"/>

        <TextView
                android:id="@+id/super_fast_speed_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onSpeedClicked"
                android:padding="7dp"
                android:text="@string/speed_super_fast"
                android:textColor="@color/speedTextNormal"
                android:textSize="15sp"/>
    </LinearLayout>

    <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipChildren="false">

        <com.qiniu.shortvideo.bytedance.view.FocusIndicator
                android:id="@+id/focus_indicator"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
    </FrameLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp">

        <ImageView
                android:id="@+id/screen_rotate_button"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:clickable="true"
                android:onClick="onScreenRotation"
                android:src="@mipmap/btn_screen_rotation"/>

        <ImageView
                android:id="@+id/capture_frame_button"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:onClick="onCaptureFrame"
                android:src="@drawable/btn_capture_frame"/>

        <ImageView
                android:id="@+id/switch_camera"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:onClick="onClickSwitchCamera"
                android:src="@drawable/btn_switch_camera"/>

        <ImageView
                android:id="@+id/switch_flash"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:onClick="onClickSwitchFlash"
                android:src="@drawable/btn_flash_selector"
                android:visibility="gone"/>

        <ImageView
                android:id="@+id/qr_code"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:onClick="onClickQRCode"
                android:src="@drawable/ic_qr_scanner"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_face_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorBg"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/similarity"
                    android:textColor="@color/colorWhite"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/cost"
                    android:textColor="@color/colorWhite"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="end"
                android:minWidth="60dp"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_similarity_face_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"/>

            <TextView
                    android:id="@+id/tv_cost_face_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorWhite"/>

            <TextView
                    android:id="@+id/tv_result_face_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorWhite"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/bottom_control_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/preview"
            android:background="@android:color/background_dark"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <com.qiniu.shortvideo.bytedance.view.SectionProgressBar
                android:id="@+id/record_progressbar"
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

        <LinearLayout
                android:id="@+id/btns"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center">

            <ImageView
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_delete"
                    android:clickable="true"
                    android:onClick="onClickDelete"/>

            <ImageView
                    android:id="@+id/record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:clickable="true"
                    android:src="@drawable/btn_record"/>

            <ImageView
                    android:id="@+id/concat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_concat"
                    android:clickable="true"
                    android:onClick="onClickConcat"/>

        </LinearLayout>


        <LinearLayout
                android:id="@+id/ll_feature"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

            <LinearLayout
                    android:id="@+id/ll_identify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_item_unselect_selector"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_identification"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detect"
                        android:textColor="@color/featureboard_bg"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_effect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/bg_item_unselect_selector"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_effect"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/effect"
                        android:textColor="@color/featureboard_bg"/>
            </LinearLayout>


            <LinearLayout
                    android:id="@+id/ll_sticker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/bg_item_unselect_selector"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_sticker"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sticker"
                        android:textColor="@color/featureboard_bg"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/audio_mix_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:onClick="onClickAddMixAudio"
                    android:src="@mipmap/btn_mix_audio"/>

            <TextView
                    android:id="@+id/recording_percentage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0%"
                    android:textColor="#FFFFFF"/>

            <ImageView
                    android:id="@+id/save_to_draft_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:onClick="onClickSaveToDraft"
                    app:srcCompat="@drawable/ic_draft"/>

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
            android:id="@+id/board_container"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_alignParentBottom="true"/>

    <ImageView
            android:id="@+id/iv_face_verify_show"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_above="@id/bottom_control_panel"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"/>
</RelativeLayout>